Avoid Last Block Stretch

--- a/src/Assets/form/components/ascent-blockselect.css
+++ b/src/Assets/form/components/ascent-blockselect.css
@@ -1,7 +1,8 @@
 .cms-blockselect {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .cms-blockselect-option {
